# wineopenxr-for-darwin

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  generate_thunks.py  set_wine_openxr_loader.sh
cmake/: x86_64-w64-mingw32.cmake
include/: unixcall.generated.h  unixcall.h
mac/: CMakeLists.txt  Makefile  main.m  thunks.generated.h
win/: CMakeLists.txt  Makefile  dxmt.hpp  main.c  main.cpp  openxr64.json  thunks.generated.h  wine_unixcall.c  wine_unixcall.h
